# araseo_dalimi_ws

./: .gitignore  PROGRESS.md  README.md  lane_detection.py
.claude/: settings.local.json
docs/: ARASEO_DALIMI_waypoint_extraction.md  route_map.json  topology_nav_graph_directed.json
src/araseo_bringup/: CMakeLists.txt  README.md  package.xml
src/araseo_bringup/launch/: bev_calib.launch.py  fleet.launch.py  robot.launch.py
src/araseo_bringup/scripts/: auto_drive.py  camera_stream.py  camera_teleop.py  dynamixel_driver_node.py  install_service.sh  map_viewer.py  start_autodrive.sh  start_robot.sh  stop_autodrive.sh  stop_robot.sh  ultrasonic_node.py  waypoint_follower.py
src/araseo_bringup/systemd/: araseo-robot.service
src/araseo_dalimi_interfaces/: CMakeLists.txt  package.xml
src/araseo_dalimi_interfaces/action/: NavigateToGoal.action
src/araseo_dalimi_interfaces/msg/: FleetStatus.msg  LaneInfo.msg  MissionStatus.msg  RobotPose.msg  TrafficSign.msg
src/araseo_dalimi_interfaces/srv/: GetMissionStatus.srv  SetDrivingMode.srv  SetMission.srv
src/araseo_gps_camera/: package.xml  setup.cfg  setup.py
src/araseo_gps_camera/araseo_gps_camera/: gps_camera_receiver_node.py
src/araseo_hud/: package.xml  setup.cfg  setup.py
src/araseo_hud/araseo_hud/: hud_overlay_node.py
src/araseo_hud/config/: hud_params.yaml
src/araseo_lane_following/: package.xml  setup.cfg  setup.py
src/araseo_lane_following/araseo_lane_following/: lane_follower_node.py
src/araseo_lane_following/config/: lane_params.yaml
src/araseo_lane_following/scripts/: bev_calibrator.py
src/araseo_localization/: CMakeLists.txt  package.xml
src/araseo_localization/config/: ekf.yaml
src/araseo_localization/launch/: localization.launch.py
src/araseo_localization/scripts/: auto_calibration_node.py  pose_to_odom_node.py  wheel_odom_node.py
src/araseo_mission_manager/: package.xml  setup.cfg  setup.py
src/araseo_mission_manager/araseo_mission_manager/: mission_manager_node.py
src/araseo_mission_manager/config/: map_topology.yaml  mission_params.yaml
src/araseo_traffic_law/: package.xml  setup.cfg  setup.py
src/araseo_traffic_law/araseo_traffic_law/: traffic_law_manager_node.py
src/araseo_traffic_law/config/: traffic_law_params.yaml
src/gps_field_msgs/: CMakeLists.txt  package.xml
src/gps_field_msgs/msg/: PinkyGps.msg
